# sqlalchemy-flattener

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
examples/: instances.py  models.py  raw.sql  raw_dict.py  script.py
sqlalchemy_flattener/: flattener.py  main.py
src/: enums.py  main.py  models.py  utils.py
tests/: conftest.py  test_flattening.py
